[package]
name = "rns-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
#num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num-complex = "0.4"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "local-time"] }
time = { version = "0.3", features = ["macros"] }

rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["plotters", "html_reports"]}
